# pthin

./: .gitignore  README.md  hypothesis_testing.ipynb  main.py  normal_ci.ipynb  pyproject.toml
data/: get_biobank_summaries.py
experiments/: estimation.ipynb  fisher_info.ipynb  hypothesis_testing.ipynb  normal_ci.ipynb
pthin/: __init__.py  estimate.py  inference.py  randomize.py
tests/: test_estimate.py  test_inference.py  test_randomize.py
