[project]
name = "pval-thinning"
version = "0.1.0"
description = "Randomized thinning of p-values for independent post-selection inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pthin"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "scipy>=1.15.3",
]
