[project]
name = "pval-thinning"
version = "0.1.0"
description = "Randomized thinning of p-values for independent post-selection inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.15.3",
]

[project.urls]
Homepage = "https://github.com/rflperry/pthin"
Repository = "https://github.com/rflperry/pthin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pthin"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
notebooks = [
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
